WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
62053
Biquad filter coefficient naming is incorrect
https://bugs.webkit.org/show_bug.cgi?id=62053
Summary
Biquad filter coefficient naming is incorrect
Chris Rogers
Reported
2011-06-03 14:32:16 PDT
Biquad filter coefficient naming is incorrect
Attachments
Patch
(5.57 KB, patch)
2011-06-03 14:48 PDT
,
Chris Rogers
kbr
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Rogers
Comment 1
2011-06-03 14:46:24 PDT
This is just a simple variable naming change to reflect the commonly used naming convention for biquad filters:
http://en.wikipedia.org/wiki/Digital_biquad_filter
This is not a change in functionality, just in naming convention. The current names have the 'a' and 'b' variable names reversed. This patch changes the naming as follows: m_a0 -> m_b0 m_a1 -> m_b1 m_b2 -> m_b2 m_b1 -> m_a1 m_b2 -> m_a2 This minor naming change will help clarify filter coefficient calculation from cookbook filter formulas. Why did I have the names reversed in the first place? Because I was coding this from memory and got the names (if not the functionality) wrong.
Chris Rogers
Comment 2
2011-06-03 14:48:22 PDT
Created
attachment 95967
[details]
Patch
Kenneth Russell
Comment 3
2011-06-03 15:23:28 PDT
Comment on
attachment 95967
[details]
Patch Looks fine.
Chris Rogers
Comment 4
2011-06-03 15:52:52 PDT
Committed
r88072
: <
http://trac.webkit.org/changeset/88072
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug