2011-06-03  Chris Rogers  <crogers@google.com>

Reviewed by Kenneth Russell.

        Biquad filter coefficient naming is incorrect
        https://bugs.webkit.org/show_bug.cgi?id=62053

        No new tests since audio API is not yet implemented.

        * platform/audio/Biquad.cpp:
        (WebCore::Biquad::Biquad):
        (WebCore::Biquad::process):
        (WebCore::Biquad::processFast):
        (WebCore::Biquad::setLowpassParams):
        (WebCore::Biquad::setHighpassParams):
        (WebCore::Biquad::setLowShelfParams):
        (WebCore::Biquad::setZeroPolePairs):
        * platform/audio/Biquad.h:


Canonical link: https://commits.webkit.org/77526@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@88072 268f45cc-cd09-0410-ab3c-d52691b4dbfc