Source/WebCore/platform/audio/Biquad.h
@@ -71,13 +71,11 @@ public:
 
 private:
     // Filter coefficients
-    double m_a0;
-    double m_a1;
-    double m_a2;
+    double m_b0;
     double m_b1;
     double m_b2;
-
-    double m_g;
+    double m_a1;
+    double m_a2;
 
     // Filter memory
     double m_x1; // input delayed by 1 sample
